# huntd

./: .gitignore  README.md  ROADMAP.md  huntd-report.md  pyproject.toml
huntd/: __init__.py  achievements.py  analytics.py  cli.py  export.py  git.py  scanner.py  theme.py  tui.py
tests/: test_achievements.py  test_analytics.py  test_export.py  test_git.py  test_scanner.py
