[build-system]
requires = ["setuptools>=68.0,<75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huntd"
version = "0.2.1"
description = "Your coding fingerprint — local git analytics dashboard for all your repos."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TRINITY-21"}]
keywords = ["git", "analytics", "dashboard", "tui", "developer-tools", "cli", "coding-stats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40",
    "textual-plotext>=0.2",
    "plotext>=5.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/TRINITY-21/huntd"
Repository = "https://github.com/TRINITY-21/huntd"
Issues = "https://github.com/TRINITY-21/huntd/issues"

[project.scripts]
huntd = "huntd.cli:main"

[tool.setuptools.packages.find]
include = ["huntd*"]
